--- a/ValheimPlus/ValheimPlus.csproj
+++ b/ValheimPlus/ValheimPlus.csproj
@@ -326,9 +326,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdvancedBuildingMode.cs" />
-    <Compile Include="AdvancedEditingMode.cs" />
-    <Compile Include="Beehive.cs" />
+    <Compile Include="BasePatch.cs" />
+    <Compile Include="Helper.cs" />
+    <Compile Include="Patches\AdvancedBuildingMode.cs" />
+    <Compile Include="Patches\AdvancedEditingMode.cs" />
+    <Compile Include="Patches\Beehive.cs" />
     <Compile Include="Configurations\BaseConfig.cs" />
     <Compile Include="Configurations\Configuration.cs" />
     <Compile Include="Configurations\ConfigurationExtra.cs" />
@@ -350,25 +352,24 @@
     <Compile Include="Configurations\Sections\Unarmed.cs" />
     <Compile Include="Configurations\Sections\StaminaWeapons.cs" />
     <Compile Include="Configurations\Sections\StaminaConfiguration.cs" />
-    <Compile Include="Experience.cs" />
-    <Compile Include="Fireplace.cs" />
-    <Compile Include="Helper.cs" />
-    <Compile Include="Humanoid.cs" />
+    <Compile Include="Patches\Experience.cs" />
+    <Compile Include="Patches\Fireplace.cs" />
+    <Compile Include="Patches\Humanoid.cs" />
     <Compile Include="Initialize.cs" />
-    <Compile Include="Fermenter.cs" />
-    <Compile Include="Inventory.cs" />
-    <Compile Include="ItemDrop.cs" />
-    <Compile Include="Player.cs" />
-    <Compile Include="PlayerDodgeRoll.cs" />
+    <Compile Include="Patches\Fermenter.cs" />
+    <Compile Include="Patches\Inventory.cs" />
+    <Compile Include="Patches\ItemDrop.cs" />
+    <Compile Include="Patches\Player.cs" />
+    <Compile Include="Patches\PlayerDodgeRoll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server.cs" />
+    <Compile Include="Patches\Server.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="SharedMapSystem.cs" />
-    <Compile Include="Smelter.cs" />
-    <Compile Include="PlayerStats.cs" />
+    <Compile Include="Patches\SharedMapSystem.cs" />
+    <Compile Include="Patches\Smelter.cs" />
+    <Compile Include="Patches\PlayerStats.cs" />
     <Compile Include="Version.cs" />
-    <Compile Include="WearNTear.cs" />
-    <Compile Include="Workbench.cs" />
+    <Compile Include="Patches\WearNTear.cs" />
+    <Compile Include="Patches\Workbench.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
